--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,26 @@ export(lfs_read_1997)
 export(lfs_read_1998)
 export(lfs_read_1999)
 export(lfs_read_2000)
+export(lfs_read_2001)
+export(lfs_read_2002)
+export(lfs_read_2003)
+export(lfs_read_2004)
+export(lfs_read_2005)
+export(lfs_read_2006)
+export(lfs_read_2007)
+export(lfs_read_2008)
+export(lfs_read_2009)
+export(lfs_read_2010)
+export(lfs_read_2011)
+export(lfs_read_2012)
+export(lfs_read_2013)
+export(lfs_read_2014)
+export(lfs_read_2015)
+export(lfs_read_2016)
+export(lfs_read_2017)
+export(lfs_read_2018)
+export(lfs_read_2019)
+export(lfs_read_2020)
+export(lfs_read_2021)
+export(lfs_read_2022)
+export(lfs_read_2023)
