add longitudinal variables vignette

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -101,6 +101,7 @@ articles:
 - title: Variables
   contents:
   - codebook
+  - codebook-longitudinal
 
 - title: UK Labour market data
   contents:
