--- a/public/pkgdown.yml
+++ b/public/pkgdown.yml
@@ -4,8 +4,8 @@ pkgdown_sha: ~
 articles:
   codebook-longitudinal: codebook-longitudinal.html
   codebook: codebook.html
-  Employment: Employment.html
-last_built: 2023-08-15T13:47Z
+  employment-and-underemployment: employment-and-underemployment.html
+last_built: 2023-08-15T15:09Z
 urls:
   reference: https://stapm.gitlab.io/r-packages/lfsclean/reference
   article: https://stapm.gitlab.io/r-packages/lfsclean/articles
