add extra waves of LFS longitudinal data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,14 @@ export(lfs_read_2020)
 export(lfs_read_2021)
 export(lfs_read_2022)
 export(lfs_read_2023)
+export(lfs_read_5q_2012)
+export(lfs_read_5q_2013)
+export(lfs_read_5q_2014)
+export(lfs_read_5q_2015)
+export(lfs_read_5q_2016)
+export(lfs_read_5q_2017)
+export(lfs_read_5q_2018)
+export(lfs_read_5q_2019)
 export(lfs_read_5q_2020)
 export(lfs_read_5q_2021)
 export(lfs_read_5q_2022)
