add 2024 quarters and update inflation to Jan 2025

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(lfs_read_2020)
 export(lfs_read_2021)
 export(lfs_read_2022)
 export(lfs_read_2023)
+export(lfs_read_2024)
 export(lfs_read_5q_2012)
 export(lfs_read_5q_2013)
 export(lfs_read_5q_2014)
